# markitdown-office-extension

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
example/: main.py
example/src/: custom_markdown_converter.py
src/markitdown_office_extension/: __init__.py  docx_converter.py  epub_converter.py  html_converter.py  markdown_converter.py  patch.py  pptx_converter.py  xlsx_converter.py
