[project]
name = "markitdown-office-extension"
description = "A markitdown plugin use to customize markdownify"
readme = "README.md"
license = "MIT"
authors = [
    { name = "qzwxsaedc", email = "me@qzwxsaedc.com" }
]
keywords = [ "markitdown", "plugin", "markdown" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = []
dynamic = [ "version" ]

[project.urls]
Homepage = "https://github.com/qzwxsaedc/markitdown-office-extension"
Repository = "https://github.com/qzwxsaedc/markitdown-office-extension"
Issues = "https://github.com/qzwxsaedc/markitdown-office-extension/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[dependency-groups]
dev = [
    "markitdown-no-magika[docx]>=0.1.2",
]

[project.entry-points."markitdown.plugin"]
office-extension = "markitdown_office_extension"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown_office_extension"]
